# suitcase

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md
src/: data_logger.cpp  data_logger.h  error.cpp  error.h  graph.cpp  graph.h  logger.cpp  logger.h  main.cpp  opengl.cpp  opengl.h  primitives.cpp  primitives.h  registers.h  setup.h  utils.cpp  utils.h
src/data-loggerlib/: CMakeLists.txt
src/data-loggerlib/lib/: data-loggerlib.lib
src/data-loggerlib/libmodbus/lib/: ModBus.lib
src/data-loggerlib/measures/: current.h  demand-power.h  energy.h  power-factor.h  power.h  voltage.h
src/data-loggerlib/src/: data-logger.cpp  data-logger.h  error.h  setup.h
src/data_loggerlib/: CMakeLists.txt
src/data_loggerlib/measures/: current.h
src/data_loggerlib/src/: data_logger.cpp  data_logger.h  error.cpp  registers.h  setup.h
src/libfreetype/lib/: freetyped.lib
src/libmodbus/include/: modbus-version.h
src/libmodbus/lib/: ws2_32.lib
src/libopengl/src/: glad.c
src/measures/: apparent_power.cpp  apparent_power.h  current.h  demand_power.h  power.h  reactive_power.cpp  reactive_power.h  real_power.cpp  real_power.h  voltage.h
src/resources/shaders/primitives/: line.geom  semicircle.frag  semicircle.vert
src/resources/shaders/text/: text.frag  text.vert
src/shaders/: dot_shader.frag  dot_shader.vert
src/shaders/line/: line.vert
src/shaders/primitives/: primitives.frag
